--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,12 @@
 			<artifactId>spring-cloud-starter-config</artifactId>
 			<version>4.0.4</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.cloud.sql/postgres-socket-factory -->
+		<dependency>
+			<groupId>com.google.cloud.sql</groupId>
+			<artifactId>postgres-socket-factory</artifactId>
+			<version>1.14.1</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-bootstrap</artifactId>
@@ -110,6 +116,21 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<environmentVariables>
+						<SERVICE_SERVER_PORT>8080</SERVICE_SERVER_PORT>
+						<ZIPKIN_URL>http://localhost:8714</ZIPKIN_URL>
+						<DATABASE_NAME>database</DATABASE_NAME>
+						<DATABASE_USERNAME>postgres</DATABASE_USERNAME>
+						<DATABASE_PASSWORD>postgres</DATABASE_PASSWORD>
+						<SQL_INSTANCE_NAME>instance-name</SQL_INSTANCE_NAME>
+						<STORAGE_SERVICE_URL>http://localhost:6500</STORAGE_SERVICE_URL>
+					</environmentVariables>
 				</configuration>
 			</plugin>
 		</plugins>
