fixed mail service and add some pipeline into services

--- a/src/main/resources/application-gcp.yaml
+++ b/src/main/resources/application-gcp.yaml
@@ -42,7 +42,7 @@ spring:
     hibernate:
       ddl-auto: create-drop
   application:
-    name: event-service
+    name: guild-service
   servlet:
     multipart:
       enabled: true
