--- a/src/main/resources/bootstrap-configserver.yml
+++ b/src/main/resources/bootstrap-configserver.yml
@@ -3,5 +3,5 @@ spring:
     name: guild-service
   cloud:
     config:
-      uri: http://localhost:8887
-      profile: localhost
+      uri: http://${CONFIG_URL}:8887 # "localhost" or docker config container name
+      profile: ${CONFIG_PROFILE} # "localhost" or "docker"
